wikidata names titles

--- a/wiki_names_titles.ipynb
+++ b/wiki_names_titles.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "830f5eae",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -38,7 +42,11 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "2dacf8cd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -309,7 +317,11 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "59ec7399",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -356,7 +368,11 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "b14fecbd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -399,7 +415,11 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "7ff9e7ed",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -478,7 +498,11 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "92a12e9a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -521,7 +545,11 @@
    "cell_type": "code",
    "execution_count": 93,
    "id": "af110b8b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -549,7 +577,11 @@
    "cell_type": "code",
    "execution_count": 121,
    "id": "d2589993",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -621,7 +653,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eb00b35f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -664,7 +700,11 @@
    "cell_type": "code",
    "execution_count": 127,
    "id": "eb00e683",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
