--- a/wiki_person.ipynb
+++ b/wiki_person.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "# wiki lang to iso\n",
     "WIKI_DIR = '/backup/wikidata'\n",
-    "api_key = 'keyVZomJGnZdAB68O'  # TODO save secure\n",
+    "api_key = open('airtable_key.txt')\n",
     "from pyairtable import Table, Api\n",
     "import sys\n",
     "sys.path.insert(0, '/projekti/nelma')\n",
