--- a/wiki_person.ipynb
+++ b/wiki_person.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "125dcf97",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "dict_keys(['douglas adams'])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,12 +21,13 @@
     "import json\n",
     "from collections import Counter, defaultdict\n",
     "from wiki_labels import qid_lab_get\n",
+    "from wiki_location import q2cc\n",
     "qid_lab_get(42, 'en').keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "bc9a8704",
    "metadata": {},
    "outputs": [
@@ -36,7 +37,7 @@
        "94"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +45,7 @@
    "source": [
     "# wiki lang to iso\n",
     "WIKI_DIR = '/backup/wikidata'\n",
-    "api_key = open('airtable_key.txt')\n",
+    "api_key = open('airtable_key.txt').read()\n",
     "from pyairtable import Table, Api\n",
     "import sys\n",
     "sys.path.insert(0, '/projekti/nelma')\n",
@@ -91,25 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "687a6bb3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "US HR\n"
-     ]
-    }
-   ],
-   "source": [
-    "from wiki_location import q2cc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "ecf37331",
    "metadata": {},
    "outputs": [],
@@ -134,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "b09a3c09",
    "metadata": {},
    "outputs": [
@@ -237,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "f5598f8b",
    "metadata": {},
    "outputs": [
@@ -245,12 +228,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6627 /backup/wikidata/hr_wiki.csv\r\n"
+      "head: cannot open '/projekti/mondonomo/books/thai/thai_wiki.csv' for reading: No such file or directory\r\n"
      ]
     }
    ],
    "source": [
-    "!wc -l  $fn"
+    "!head /projekti/mondonomo/books/thai/thai_wiki.csv"
    ]
   }
  ],
