--- a/wiki_names_titles.ipynb
+++ b/wiki_names_titles.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "830f5eae",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -42,11 +38,7 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "2dacf8cd",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -317,11 +309,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "59ec7399",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -368,11 +356,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "b14fecbd",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -415,11 +399,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "7ff9e7ed",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -498,11 +478,7 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "92a12e9a",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -543,50 +519,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "af110b8b",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 167,
+   "id": "b4406ec7",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({1074}, 'tit_hr_Latn_')"
+       "({1074},\n",
+       " 'tit_hr_Latn_',\n",
+       " {'de_Latn_',\n",
+       "  'de_Latn_AT',\n",
+       "  'de_Latn_CH',\n",
+       "  'de_Latn_DE',\n",
+       "  'de_Latn_LI',\n",
+       "  'de_Latn_NL'})"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t2set = defaultdict(set)\n",
+    "prov2set = defaultdict(set)\n",
+    "\n",
     "for t, c in t2i.items():\n",
-    "    t2 = t.split('_')\n",
-    "    t2 = '_'.join(t2[:3])\n",
-    "    t2set[t2].add(c)\n",
+    "    t = t.split('_')\n",
+    "    t2set['_'.join(t[:3])].add(c)    \n",
+    "    prov2set['_'.join(t[1:3])].add('_'.join(t[1:]))\n",
     "t2set = dict(t2set)    \n",
     "i2t = {k: v for v, k in t2i.items()}\n",
-    "t2set['tit_hr_Latn'], i2t[1074]"
+    "prov2set = dict(prov2set)    \n",
+    "i2t = {k: v for v, k in t2i.items()}\n",
+    "t2set['tit_hr_Latn'], i2t[1074], prov2set['de_Latn']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "d2589993",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
+   "execution_count": 175,
+   "id": "bfaafb22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1221"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "prov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "d2589993",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5bf88705ac2465e88adb08b39b9a8cd",
+       "model_id": "b76d6a375f604a5e9b58d2a7aad3fe2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,13 +599,42 @@
     },
     {
      "data": {
+      "text/plain": [
+       "(5099, 2135573, {'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 4043})"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs = {}\n",
+    "for k, v in tqdm(toks.items(), total=len(toks)):\n",
+    "    (tok, provt) = k.split('_', 1) \n",
+    "    for (src, tip), cnt in v.items():\n",
+    "        if (tok, provt) not in freqs:\n",
+    "            freqs[(tok, provt)] = {'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 0, }\n",
+    "        freqs[(tok, provt)][tip] += cnt\n",
+    "\n",
+    "freqs[('prof', 'hr_Latn')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "4e2afcb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74ecae9dd7e24ea2942794ab4d8f88f7",
+       "model_id": "adaf314a9bbf4e4bb13aac78dbb8d10d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/43177209 [00:00<?, ?it/s]"
+       "  0%|          | 0/8313926 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -614,50 +643,57 @@
     {
      "data": {
       "text/plain": [
-       "(5099, 2135573, {'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 4043}, 100.0)"
+       "(20, 1263429, (1, 5.88), (16, 94.12), (4043, 100.0))"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "freqs = {}\n",
-    "nema = Counter()\n",
-    "for k, v in tqdm(toks.items(), total=len(toks)):\n",
-    "    (tok, provt) = k.split('_', 1) \n",
-    "    for (src, tip), cnt in v.items():\n",
-    "        provt = f'{tip}_{provt}'\n",
-    "        if provt in t2set:\n",
-    "            for prov in t2set[provt]:\n",
-    "                if (tok, prov) not in freqs:\n",
-    "                    freqs[(tok, prov)] = {'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 0, }\n",
-    "                freqs[(tok, prov)][tip] += cnt\n",
-    "        else:\n",
-    "            nema[provt] += 1\n",
-    "\n",
     "freqs2 = {}\n",
+    "nema = Counter()\n",
     "for k, v in tqdm(freqs.items(), total=len(freqs)):\n",
-    "    tok, prov = k\n",
-    "    tip = i2t[prov].split('_')[0]\n",
-    "    cnt = v[tip]\n",
-    "    cnt_all = sum(v.values())\n",
-    "    if cnt_all > 0:\n",
-    "        freqs2[(tok, prov)] = round(cnt*100 / cnt_all,2)\n",
-    "    \n",
-    "len(nema), sum(nema.values()), freqs[('prof', 1074)], freqs2[('prof', 1074)]"
+    "    tok, provt = k\n",
+    "    tips = [k for k in v if v[k]>0]\n",
+    "    if provt in prov2set:\n",
+    "        for tip in tips:\n",
+    "            if tip == 'tit':\n",
+    "                allprovs = [provt+'_']\n",
+    "            else:\n",
+    "                allprovs = [a for a in prov2set[provt] if not a.endswith('_')]\n",
+    "            cnt = v[tip]\n",
+    "            cnt_all = sum(v.values())\n",
+    "            if cnt_all > 0: \n",
+    "                for prov in allprovs:\n",
+    "                    if f'{tip}_{prov}' in t2i:\n",
+    "                        provi = t2i[f'{tip}_{prov}']\n",
+    "                        freqs2[(tok, provi)] = (cnt, round(cnt*100 / cnt_all,2))\n",
+    "                    else:\n",
+    "                        nema[f'{tip}_{prov}'] += 1\n",
+    "len(nema), sum(nema.values()), freqs2[('doctor', t2i['tit_en_Latn_'])], freqs2[('doctor', t2i['ln_en_Latn_US'])], freqs2[('prof', t2i['tit_hr_Latn_'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "566f552c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to Oracle\n",
+    "import cx_Oracle\n",
+    "tls = 'db202201301230_high'\n",
+    "connection = cx_Oracle.connect(user='mondo', password=open('orapsw.txt').read(),dsn=tls,encoding=\"UTF-8\")\n",
+    "cur = connection.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "eb00b35f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -665,19 +701,25 @@
      "text": [
       "loading ...\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tqdm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m batch \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     14\u001b[0m br \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t_prov, cnt \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m(freqs2\u001b[38;5;241m.\u001b[39mitems(), total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(freqs2)):\n\u001b[1;32m     16\u001b[0m     tok, prov \u001b[38;5;241m=\u001b[39m t_prov\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mbytes\u001b[39m(tok, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m190\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tqdm' is not defined"
+     ]
     }
    ],
    "source": [
-    "# to Oracle\n",
-    "import cx_Oracle\n",
-    "tls = 'db202201301230_high'\n",
-    "connection = cx_Oracle.connect(user='mondo', password=open('orapsw.txt').read(),dsn=tls,encoding=\"UTF-8\")\n",
-    "cur = connection.cursor()\n",
     "try:\n",
     "    cur.execute('drop table mondo.wiki_name_parts purge') \n",
     "except:\n",
     "    pass\n",
-    "cur.execute('create table mondo.wiki_name_parts (token varchar2(200), prov number(4,0), ratio number(6, 2))')\n",
+    "cur.execute('create table mondo.wiki_name_parts (token varchar2(200), prov number(4,0), cnt number(6, 0), ratio number(6, 2), CONSTRAINT pk_locations PRIMARY KEY (token, prov)) ORGANIZATION INDEX')\n",
     "#cur.execute('delete  from  mondo.wiki_name_parts')\n",
     "print('loading ...')\n",
     "batch = []\n",
@@ -685,40 +727,60 @@
     "for t_prov, cnt in tqdm(freqs2.items(), total=len(freqs2)):\n",
     "    tok, prov = t_prov\n",
     "    if len(bytes(tok, 'utf-8')) < 190:\n",
-    "        batch.append((tok, prov, cnt))\n",
+    "        batch.append((tok, prov, cnt[0], cnt[1]))\n",
     "    if len(batch)>10_048:\n",
-    "        cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :2) ', batch) \n",
+    "        cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :3, :4) ', batch) \n",
     "        connection.commit()\n",
     "        batch = []\n",
     "    br += 1\n",
-    "cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :2) ', batch) \n",
+    "cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :3, :4) ', batch) \n",
     "connection.commit()\n",
-    "    "
+    "print(br)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "eb00e683",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select m.n, (select t.t from  mondo.TYPEID t where t.id=m.t) t, c from MONDO.NAME_M m where n='dr' and\n",
+    "# not exists (select 1 from mondo.TYPEID where id=m.t and regexp_like(t, 'title_.+') )  and\n",
+    "# exists (select 1 from mondo.wiki_name_parts w where w.token=m.n) and\n",
+    "# not exists (select 1 from mondo.wiki_name_parts w where w.token=m.n and w.PROV=m.T and w.RATIO>5);\n",
+    "\n",
+    "# AD HOC cleaning \n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "delete from MONDO.NAME_M m where\n",
+    "not exists (select 1 from mondo.TYPEID where id=m.t and regexp_like(t, 'title_.+') )  and\n",
+    "exists (select 1 from mondo.wiki_name_parts w where w.token=m.n) and\n",
+    "not exists (select 1 from mondo.wiki_name_parts w where w.token=m.n and w.PROV=m.T and w.RATIO>5)\n",
+    "\"\"\")\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1d8471f4",
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "42563037"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cur' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcur\u001b[49m\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mselect m.n, t.t from mondo.name_m m, mondo.TYPEID t where t.id=m.t and m.n=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmr.\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mfetchall()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cur' is not defined"
+     ]
     }
    ],
    "source": [
-    "len(batch)"
+    "cur.execute(\"select m.n, t.t from mondo.name_m m, mondo.TYPEID t where t.id=m.t and m.n='mr.'\").fetchall()"
    ]
   }
  ],
